force-app/main/default/objects/Donation__c/fields/Alumni_Donor__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If donor is alumni</description>
    <label>Alumni Donor</label>
    <referenceTo>Alumni__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Alumni_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>