force-app/main/default/objects/Donation__c/fields/Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous</label>
    <type>Checkbox</type>
</CustomField>