force-app/main/default/objects/Donation__c/fields/Anonymous_Donation__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If donor wishes to remain anonymous</description>
    <label>Anonymous Donation</label>
    <type>Checkbox</type>
</CustomField>