force-app/main/default/objects/Donation__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <label>Donation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Recurring Monthly</fullName>
            </value>
            <value>
                <fullName>Recurring Quarterly</fullName>
            </value>
            <value>
                <fullName>Recurring Annual</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>