force-app/main/default/objects/Donation__c/fields/External_Donor__c.field-meta.xml
<CustomField>
    <fullName>External_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If donor is external person</description>
    <label>External Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>External_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>