force-app/main/default/objects/Donation__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Fund</fullName>
                <default>true</default>
                <label>General Fund</label>
            </value>
            <value>
                <fullName>Scholarship Fund</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Emergency Fund</fullName>
            </value>
            <value>
                <fullName>Alumni Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>