force-app/main/default/objects/Donation__c/fields/Recognition_Level__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Level__c</fullName>
    <label>Recognition Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefactor ($50,000+)</fullName>
            </value>
            <value>
                <fullName>Patron ($25,000+)</fullName>
            </value>
            <value>
                <fullName>Sponsor ($10,000+)</fullName>
            </value>
            <value>
                <fullName>Supporter ($5,000+)</fullName>
            </value>
            <value>
                <fullName>Friend ($1,000+)</fullName>
            </value>
            <value>
                <fullName>Contributor ($500+)</fullName>
            </value>
            <value>
                <fullName>Donor (&lt;$500)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>