force-app/main/default/objects/Donation__c/fields/Solicitation_Method__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Method__c</fullName>
    <label>Solicitation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Personal Visit</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>