force-app/main/default/objects/Donation__c/fields/Solicitor__c.field-meta.xml
<CustomField>
    <fullName>Solicitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff member who solicited donation</description>
    <label>Solicitor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solicited_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>