force-app/main/default/objects/Donation__c/fields/Thank_You_Date__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Date__c</fullName>
    <label>Thank You Date</label>
    <type>Date</type>
</CustomField>