force-app/main/default/objects/Donation__c/fields/Tribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Tribute_Name__c</fullName>
    <label>Tribute Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>