force-app/main/default/objects/Donation__c/fields/Tribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Tribute_Type__c</fullName>
    <label>Tribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Honor Of</fullName>
            </value>
            <value>
                <fullName>In Memory Of</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>