force-app/main/default/objects/Donation__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <description>University receiving donation</description>
    <label>University</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations_Received</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>