force-app/main/default/objects/Donation__c/validationRules/Donation_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Donation_Amount_Validation</fullName>
    <active>true</active>
    <description>Ensures donation amount is positive</description>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Donation amount must be greater than 0</errorMessage>
</ValidationRule>