force-app/main/default/objects/Donation__c/validationRules/Positive_Donation_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Donation_Amount</fullName>
    <active>true</active>
    <description>Donation amount must be greater than zero</description>
    <errorConditionFormula>Donation_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Donation_Amount__c</errorDisplayField>
    <errorMessage>Donation amount must be greater than zero</errorMessage>
</ValidationRule>